HADOOP-15941. [JDK 11] Compilation failure: package com.sun.jndi.ldap is not visible.